--- a/pom.xml
+++ b/pom.xml
@@ -182,7 +182,7 @@
         <dependency>
   		<groupId>org.drools</groupId>
    		<artifactId>drools-spring</artifactId>
-   		<version>5.4.0.Final</version>
+   		<version>5.6.0.Final</version>
   		</dependency>
   		<!-- https://mvnrepository.com/artifact/org.drools/drools-core -->
 		<dependency>
@@ -190,6 +190,32 @@
 		    <artifactId>drools-core</artifactId>
 		    <version>7.8.0.Final</version>
 		</dependency>
-  		
+  		<dependency>
+  			<groupId>org.kie</groupId>
+  			<artifactId>kie-spring</artifactId>
+  			<version>7.8.0.Final</version>
+  		</dependency>
+  		<dependency>
+    		<groupId>org.kie</groupId>
+    		<artifactId>kie-api</artifactId>
+    		<version>7.8.0.Final</version>
+		</dependency>
+		<dependency>
+   			 <groupId>org.drools</groupId>
+    		<artifactId>drools-compiler</artifactId>
+    		<version>7.8.0.Final</version>
+		</dependency>
+		<dependency>
+    		<groupId>org.drools</groupId>
+    		<artifactId>drools-verifier</artifactId>
+    		<version>7.8.0.Final</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.thoughtworks.xstream/xstream -->
+		<dependency>
+		    <groupId>com.thoughtworks.xstream</groupId>
+		    <artifactId>xstream</artifactId>
+		    <version>1.4.10</version>
+		</dependency>
+		
   </dependencies>
 </project>
